Fix FindBugs violations and enable enforcement in cloudservicechain
See in-line comments.

Change-Id: I79438536ecb7f7c5c5e63ca732e881f0dce1bb98
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>